# SnakeRL

./: README.md  agent.py  dqn.py  experience_replay.py  hyperparams.yml  logger.py  requirements.txt  snake.py  snake_rust.py  watch.py
models/: best_conv.txt  best_hybrid.txt  best_mlp.txt  snake_best_conv.pt  snake_best_hybrid.pt  snake_best_mlp.pt
snake_rs/: Cargo.toml  pyproject.toml
snake_rs/src/: lib.rs
