[package]
name = "snake_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "snake_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
arrayvec = "0.7"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
